--- a/project03/src/App.css
+++ b/project03/src/App.css
@@ -47,11 +47,7 @@ nav{
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    gap: 20px;
-    /* display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-items: legacy;
-    column-gap: 1em; */
+    gap: 30px;
     margin-bottom: 5vh;
     margin-top: 8vh;
     overflow: auto;
@@ -76,4 +72,14 @@ span{
     margin: 0;
     margin-top: 10px;
     font-weight: 500;
+}
+
+.hero-title{
+    font-size: 40px;
+    margin: 0;
+}
+
+.hero-des{
+    font-size: 20px;
+    width: 55%;
 }
